# Divine-Favored-Couple

./: .gitignore  CMakeLists.txt  DEVELOPMENT_PLAN.md  IMPLEMENTATION_REQUIREMENTS.md  Package.swift  README.md  TECH_STACK_2025.md
.github/workflows/: ci.yml
Engine/include/: GameEngine.h
Engine/src/: placeholder.cpp
Sources/DivineFavoredCoupleApp/: ContentView.swift  DivineFavoredCoupleApp.swift  GameStateManager.swift  main.swift
Sources/DivineFavoredCoupleApp/Audio/: AudioService.swift
Sources/DivineFavoredCoupleApp/Crash/: CrashReporter.swift
Sources/DivineFavoredCoupleApp/Performance/: PerformanceMonitor.swift
Sources/DivineFavoredCoupleApp/Rendering/: MetalView.swift  Shaders.metal
Sources/DivineFavoredCoupleApp/Views/: AuguryTabView.swift  GachaTabView.swift  HomeTabView.swift  InventoryTabView.swift  ShopTabView.swift
Sources/GameKernel/: GameConfig.swift
Sources/GameKernel/Config/: event_config.json  gacha_config.json  shop_config.json
Sources/GameKernel/Destiny/: AuguryService.swift
Sources/GameKernel/Economy/: LuckMapping.swift  MeritState.swift
Sources/GameKernel/Events/: EventEngine.swift  EventReportLog.swift
Sources/GameKernel/Gacha/: GachaEngine.swift
Sources/GameKernel/Inventory/: Inventory.swift
Sources/GameKernel/Payments/: PaymentDebugService.swift
Sources/GameKernel/Protection/: ConcealmentService.swift  DefenseService.swift
Sources/GameKernel/Save/: SQLiteSaveManager.swift  SaveManager.swift  SaveService.swift  SaveState.swift
Sources/GameKernel/Shop/: ShopService.swift
Sources/GameKernel/Time/: CalendarValidator.swift  DailyRewardService.swift  MonotonicClock.swift
Tests/DivineFavoredCoupleTests/: AcceptanceTests.swift  CoreLogicTests.swift
